# EttoreFit

./: CMakeLists.txt  README.md  fit_comp.cpp  template_list.txt
include/: utils.hh  waveform_Analyser.hh  waveforms_Analyser.hh
src/: utils.cc  waveform_Analyser.cc  waveforms_Analyser.cc
template/: SPE_Template_run28370_APA4_CH0_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH10_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH11_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH12_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH13_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH14_PDHD_fbk_Nov2024.txt  SPE_Template_run28370_APA4_CH15_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH16_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH17_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH18_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH19_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH1_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH20_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH21_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH22_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH23_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH24_PDHD_fbk_Nov2024.txt  SPE_Template_run28370_APA4_CH25_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH26_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH27_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH28_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH29_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH2_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH30_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH31_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH32_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH33_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH34_PDHD_fbk_Nov2024.txt  SPE_Template_run28370_APA4_CH36_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH37_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH38_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH39_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH4_PDHD_fbk_Nov2024.txt  SPE_Template_run28370_APA4_CH5_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH6_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH7_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH8_PDHD_hpk_Nov2024.txt  SPE_Template_run28370_APA4_CH9_PDHD_hpk_Nov2024.txt  ch_25_endpoint_112_avg.txt  ch_27_endpoint_112_avg.txt  (+1 more)
template2/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
waveforms/: wf_ch0_0kV.txt  wf_ch0_100kV.txt  wf_ch0_120kV.txt  (+597 more)
